# issac-factory-jaxrl

./: .gitignore  README.md  pyproject.toml
.context/: README.md
.context/journal/: 2026-05-26.md
.superpowers/plans/: 2026-05-26-isaaclab-factory-jax-baseline.md  2026-05-26-m5a-jax-ppo-mvp.md
.superpowers/specs/: 2026-05-26-isaaclab-factory-jax-baseline-design.md  2026-05-26-m5a-jax-ppo-mvp-design.md
docs/: M1_sanity.md  controllers_survey.md  jax_learning_divergences.md
scripts/: play_rlgames.py  train_jax_ppo.py
source/factory_jax/: pyproject.toml
source/factory_jax/factory_jax/: __init__.py  backend.py  tasks.py
source/factory_jax/factory_jax/bridge/: __init__.py  jax_env_wrapper.py  tensor_convert.py
tests/: test_backend.py  test_jax_env_wrapper.py  test_tensor_convert.py
